# PyPSA-Earth-Energy-System-Optimization

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  demo.py  main.py  pyproject.toml  setup.py
data/scenarios/: baseline.yaml  grid_expansion.yaml  high_renewable.yaml  storage_heavy.yaml
src/: __init__.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  loader.py  preprocessor.py
src/models/: __init__.py  demand.py  energy_system.py  generation.py  storage.py  transmission.py
src/optimization/: __init__.py  genetic_algorithm.py  linear_programming.py
src/simulation/: __init__.py  scenario_manager.py  simulator.py
src/visualization/: __init__.py  plots.py  reports.py
tests/: __init__.py  test_models.py  test_optimization.py  test_simulation.py
